...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- RecyclerView z zawodnikami -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/textSelectedPlayers"
        app:layout_constraintBottom_toTopOf="@id/buttonAddPlayer"
...
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonNext"
        app:layout_constraintWidth_percent="0.45"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
