...
        android:id="@+id/layoutServerSelection"
        layout="@layout/layout_server_selection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layoutScoreboard"
        app:layout_constraintBottom_toTopOf="@id/buttonUndo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- WIDOK 4: Serwis (Ace/Fault/Ball in play) -->
    <include
        android:id="@+id/layoutServe"
...
